# LirePlusPlus

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/DisplayImage/: CMakeLists.txt  DisplayImage.cpp
features/: AbstractFeature.cpp  AbstractFeature.h  CMakeLists.txt  ExampleFeature.cpp  ExampleFeature.cu  ExampleFeature.h
